argocd/dev/talos/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  labels:
    app: argocd
spec:
  parentRefs:
    - name: cilium
      namespace: kube-system
      sectionName: http
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - argocd.localhost
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
          group: ""
          kind: Service
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
